--- a/Esercitazione_3/app/src/main/res/layout/activity_control_test2.xml
+++ b/Esercitazione_3/app/src/main/res/layout/activity_control_test2.xml
@@ -1,20 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_control_test"
+    android:id="@+id/activity_control_test2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.tutor_ium.esercitazione_3.ControlTest">
-
-    <view
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        class="com.example.tutor_ium.esercitazione_3.LineGraph"
-        android:id="@+id/linegraph"
-        android:layout_gravity = "left|top"/>
+    tools:context="com.example.tutor_ium.esercitazione_3.ControlTest2">
 
 </RelativeLayout>
